# nexcore-android-20260217-021334

./: README.md  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cc
app/src/main/cpp/nexcore/include/nexcore/: audit.h  core.h  filesystem.h  hash.h  json.h
app/src/main/cpp/nexcore/src/: audit.cc  core.cc  filesystem.cc  hash.cc  json.cc
app/src/main/java/com/nex/core/: MainActivity.kt  NexCoreBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
